fixed ie 9 layout bug

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,9 +32,14 @@ body {
 .banners {
 	padding:0;
 	overflow:hidden;
+	position: relative;
 }
 .banners img {
 	width: 100%;
+}
+
+.banner {
+	position: relative;
 }
 
 .banner-intro {
